[gd_scene load_steps=3 format=3 uid="uid://bxxpb25765ovf"]

[ext_resource type="Theme" uid="uid://djam525evvmrm" path="res://library/buttons/button.tres" id="1_2gry8"]
[ext_resource type="Script" path="res://scripts/screens/settings.gd" id="1_wwsb6"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wwsb6")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -174.5
offset_top = 50.0
offset_right = 174.5
offset_bottom = 362.0
grow_horizontal = 2
theme_override_constants/separation = 100

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "$_GAME_SETTINGS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Language" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Language"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "$_LANGUAGE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/Language"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme = ExtResource("1_2gry8")
theme_override_font_sizes/font_size = 30
alignment = 1
item_count = 3
selected = 0
popup/item_0/text = "Englsih"
popup/item_0/id = 0
popup/item_1/text = "Português"
popup/item_1/id = 1
popup/item_2/text = "Español"
popup/item_2/id = 2

[node name="Camera" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Camera"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "$_CAMERA_SENSITIVITY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CameraSlider" type="HSlider" parent="VBoxContainer/Camera"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme = ExtResource("1_2gry8")

[node name="Value" type="Label" parent="VBoxContainer/Camera"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "0%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -202.0
offset_top = -100.0
offset_right = 202.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 50
alignment = 1

[node name="Save" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme = ExtResource("1_2gry8")
text = "$_SAVE"

[node name="Cancel" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme = ExtResource("1_2gry8")
text = "$_CANCEL"

[connection signal="value_changed" from="VBoxContainer/Camera/CameraSlider" to="." method="_on_camera_slider_value_changed"]
[connection signal="pressed" from="HBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="HBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
